--- a/styles.css
+++ b/styles.css
@@ -481,6 +481,28 @@
     box-shadow: inset 0 100% 0 0 #0059ff40;
     color: black;
   }
+
+  .content button {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    float: center;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    box-shadow: inset 0 0 0 0 #ffffff;
+    -webkit-transition: ease-out 0.2s;
+    -moz-transition: ease-out 0.2s;
+    transition: ease-out 0.2s;
+    border-radius: 15px 15px 15px 15px;
+  }
+
+  .content button:hover {
+    background-color: #0059ff40;
+    box-shadow: inset 0 100% 0 0 #0059ff40;
+    color: black;
+  }
   
   .titlebars {
     text-align: center;
@@ -552,7 +574,7 @@
     color: white;
     text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.75);
   }
-  
+
   .tooltip {
     position: relative;
     display: inline-block;
