--- a/styles.css
+++ b/styles.css
@@ -482,7 +482,7 @@
     color: black;
   }
 
-  .content button {
+  .content hoverable {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     float: center;
@@ -498,7 +498,7 @@
     border-radius: 15px 15px 15px 15px;
   }
 
-  .content button:hover {
+  .content hoverable:hover {
     background-color: #0059ff40;
     box-shadow: inset 0 100% 0 0 #0059ff40;
     color: black;
