--- a/styles.css
+++ b/styles.css
@@ -492,14 +492,13 @@
   .content button {
     float: center;
     display: block;
-    color: #00296280;
+    background-color: #00296280;
     padding: 14px 20px;
     text-decoration: none;
     box-shadow: inset 0 0 0 0 #ffffff;
     -webkit-transition: ease-out 0.2s;
     -moz-transition: ease-out 0.2s;
     transition: ease-out 0.2s;
-    border-radius: 15px 15px 15px 15px;
   }
 
   .content button:hover {
