Patch #15 (Button Borders)

--- a/styles.css
+++ b/styles.css
@@ -482,23 +482,22 @@
     color: black;
   }
 
-  .content .buttontext {
+  .content button {
+    float: center;
+    display: block;
+    background-color: #00296200;
     color: white;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     text-align: center;
-  }
-
-  .content button {
-    float: center;
-    display: block;
-    background-color: #00296280;
     padding: 14px 20px;
     text-decoration: none;
     box-shadow: inset 0 0 0 0 #ffffff;
     -webkit-transition: ease-out 0.2s;
     -moz-transition: ease-out 0.2s;
     transition: ease-out 0.2s;
+    border-radius: 15px 15px 15px 15px;
+    border: none;
   }
 
   .content button:hover {
