--- a/styles.css
+++ b/styles.css
@@ -574,6 +574,19 @@
     color: white;
     text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.75);
   }
+  
+  .desctext2 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    text-align: left;
+    margin-left: 7px;
+    margin-top: 15px;
+    margin-right: 5px;
+    line-break: auto;
+    line-height: 22px;
+    text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.75);
+  }
 
   .tooltip {
     position: relative;
