--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,17 @@
     position: fixed;
     z-index: -2;
   }
+  .bg3 {
+    background-color: #003278
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    z-index: -2;
+  }
   .bg2 {
     background-color: rgba(0, 0, 0, 1);
     width: 100%;
