--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@
     z-index: -2;
   }
   .bg3 {
-    background-color: #003278
+    background-color: #003278;
     width: 100%;
     height: 100vh;
     top: 0;
